feat(php): Add php8.3
Add php8.3

--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -8,3 +8,7 @@ services:
   php8-2:
     build: ./8.2-fpm-alpine
     image: ghcr.io/erkenes/php:8.2-fpm-alpine
+
+  php8-3:
+    build: ./8.3-fpm-alpine
+    image: ghcr.io/erkenes/php:8.3-fpm-alpine
