--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -10,83 +10,29 @@ on:
     paths:
       - 'php/**'
       - '.github/workflows/php.yml'
+      - '.github/workflows/build-image.yml'
+
+env:
+  IMAGE_NAME: php
+  DOCKER_HUB_OWNER: erkenes
+  GHCR_OWNER: erkenes
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    uses: ./.github/workflows/build-image.yml
     strategy:
       fail-fast: false
       matrix:
         version:
-          - '8.1'
-          - '8.2'
-          - '8.3'
-          - '8.4'
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Log into github registry ghcr.io
-        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804
-        with:
-          images: |
-            erkenes/php
-            ghcr.io/erkenes/php
-
-      - name: Build PHP ${{ matrix.version }} Docker Image
-        id: build-php
-        uses: docker/build-push-action@1dc73863535b631f98b2378be8619f83b136f4a0
-        with:
-          context: ./php/${{ matrix.version }}-fpm-alpine
-          load: true
-          push: false
-          tags: erkenes/php:${{ matrix.version }}-fpm-alpine
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Scan for vulnerabilities
-        uses: crazy-max/ghaction-container-scan@v3
-        with:
-          image: erkenes/php:${{ matrix.version }}-fpm-alpine
-          dockerfile: ./php/${{ matrix.version }}-fpm-alpine/Dockerfile
-          annotations: true
-          severity_threshold: CRITICAL
-        env:
-          TRIVY_TIMEOUT: 10m
-          TRIVY_SCANNERS: 'vuln'
-
-      - name: Push PHP ${{ matrix.version }} Docker Image
-        id: push-php
-        uses: docker/build-push-action@1dc73863535b631f98b2378be8619f83b136f4a0
-        with:
-          context: ./php/${{ matrix.version }}-fpm-alpine
-          push: true
-          tags: erkenes/php:${{ matrix.version }}-fpm-alpine
-          labels: ${{ steps.meta.outputs.labels }}
-          sbom: false
-          provenance: false
-
-      - name: Push image to GHCR
-        run: |
-          docker buildx imagetools create \
-            --tag ghcr.io/erkenes/php:${{ matrix.version }}-fpm-alpine \
-            erkenes/php:${{ matrix.version }}-fpm-alpine
+          - image: '8.1-fpm-alpine'
+          - image: '8.2-fpm-alpine'
+          - image: '8.3-fpm-alpine'
+          - image: '8.4-fpm-alpine'
+            latest: true
+    with:
+      image-name: ${{ env.IMAGE_NAME }}
+      image-version: ${{ matrix.version }}
+      image-is-latest: ${{ matrix.latest }}
+      docker-hub-owner: ${{ env.DOCKER_HUB_OWNER }}
+      ghcr-owner: ${{ env.GHCR_OWNER }}
+      login-to-dhi-registry: true
