--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -18,6 +18,10 @@ on:
       ghcr-owner:
         type: string
         required: true
+      login-to-dhi-registry:
+        type: boolean
+        required: false
+        default: false
     secrets:
       DOCKER_USERNAME:
         required: true
@@ -36,6 +40,14 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772
         with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Log into registry dhi.io
+        if: ${{ inputs.login-to-dhi-registry }}
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          registry: dhi.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
