feat: update image labels and readme
- mark php 8.1 as EOL
- mark php 8.2 and 8.3 as maintenance
- update the readme
- add title, description and status to the docker images

--- a/nginx/1-alpine-dev/Dockerfile
+++ b/nginx/1-alpine-dev/Dockerfile
@@ -1,3 +1,7 @@
 FROM dhi.io/nginx:1-alpine3.21-dev
 
 EXPOSE 8080
+
+LABEL org.opencontainers.image.title="Nginx 1 Alpine Dev"
+LABEL org.opencontainers.image.description="Nginx 1 Alpine Dev Docker Image based on the docker hardened nginx image."
+LABEL status="supported"
