--- a/nginx/1-alpine/Dockerfile
+++ b/nginx/1-alpine/Dockerfile
@@ -1,3 +1,7 @@
 FROM dhi.io/nginx:1-alpine3.21
 
 EXPOSE 8080
+
+LABEL org.opencontainers.image.title="Nginx 1 Alpine"
+LABEL org.opencontainers.image.description="Nginx 1 Alpine Docker Image based on the docker hardened nginx image."
+LABEL status="supported"
