--- a/php/8.2-fpm-alpine/Dockerfile
+++ b/php/8.2-fpm-alpine/Dockerfile
@@ -60,3 +60,7 @@ RUN echo "date.timezone=${PHP_TIMEZONE:-UTC}" > $PHP_INI_DIR/conf.d/date_timezon
 
 # Define working directory
 WORKDIR /data
+
+LABEL org.opencontainers.image.title="PHP 8.2 FPM Alpine"
+LABEL org.opencontainers.image.description="PHP 8.2 is in Security Support mode. Critical security fixes only; no new features."
+LABEL status="maintenance"
